@@ -58,9 +58,8 @@ const_string ALEPHHELP[] = {
     "                          bits of NUMBER",
     "[-no]-mktex=FMT         disable/enable mktexFMT generation (FMT=tex/tfm)",
     "-output-comment=STRING  use STRING for DVI file comment instead of date",
-    "-output-directory=DIR   use DIR as the directory to write files to",
-    "[-no]-parse-first-line  disable/enable parsing of the first line of the",
-    "                          input file",
+    "-output-directory=DIR   use existing DIR as the directory to write files in",
+    "[-no]-parse-first-line  disable/enable parsing of first line of input file",
     "-progname=STRING        set program (and fmt) name to STRING",
     "-recorder               enable filename recorder (always on)",
     "[-no]-shell-escape      disable/enable \\write18{SHELL COMMAND}",
@@ -114,9 +113,8 @@ const_string EPTEXHELP[] = {
     "[-no]-mktex=FMT         disable/enable mktexFMT generation (FMT=tex/tfm)",
     "-mltex                  enable MLTeX extensions such as \\charsubdef",
     "-output-comment=STRING  use STRING for DVI file comment instead of date",
-    "-output-directory=DIR   use DIR as the directory to write files to",
-    "[-no]-parse-first-line  disable/enable parsing of the first line of the",
-    "                          input file",
+    "-output-directory=DIR   use existing DIR as the directory to write files in",
+    "[-no]-parse-first-line  disable/enable parsing of first line of input file",
     "-progname=STRING        set program (and fmt) name to STRING",
     "-recorder               enable filename recorder",
     "[-no]-shell-escape      disable/enable \\write18{SHELL COMMAND}",
@@ -171,9 +169,8 @@ const_string ETEXHELP[] = {
     "[-no]-mktex=FMT         disable/enable mktexFMT generation (FMT=tex/tfm)",
     "-mltex                  enable MLTeX extensions such as \\charsubdef",
     "-output-comment=STRING  use STRING for DVI file comment instead of date",
-    "-output-directory=DIR   use DIR as the directory to write files to",
-    "[-no]-parse-first-line  disable/enable parsing of the first line of the",
-    "                          input file",
+    "-output-directory=DIR   use existing DIR as the directory to write files in",
+    "[-no]-parse-first-line  disable/enable parsing of first line of input file",
     "-progname=STRING        set program (and fmt) name to STRING",
     "-recorder               enable filename recorder",
     "[-no]-shell-escape      disable/enable \\write18{SHELL COMMAND}",
@@ -280,10 +277,9 @@ const_string PDFTEXHELP[] = {
     "-mltex                  enable MLTeX extensions such as \\charsubdef",
     "-output-comment=STRING  use STRING for DVI file comment instead of date",
     "                          (no effect for PDF)",
-    "-output-directory=DIR   use DIR as the directory to write files to",
+    "-output-directory=DIR   use existing DIR as the directory to write files in",
     "-output-format=FORMAT   use FORMAT for job output; FORMAT is `dvi' or `pdf'",
-    "[-no]-parse-first-line  disable/enable parsing of the first line of the",
-    "                          input file",
+    "[-no]-parse-first-line  disable/enable parsing of first line of input file",
     "-progname=STRING        set program (and fmt) name to STRING",
     "-recorder               enable filename recorder",
     "[-no]-shell-escape      disable/enable \\write18{SHELL COMMAND}",
@@ -341,9 +337,8 @@ const_string PTEXHELP[] = {
     "[-no]-mktex=FMT         disable/enable mktexFMT generation (FMT=tex/tfm)",
     "-mltex                  enable MLTeX extensions such as \\charsubdef",
     "-output-comment=STRING  use STRING for DVI file comment instead of date",
-    "-output-directory=DIR   use DIR as the directory to write files to",
-    "[-no]-parse-first-line  disable/enable parsing of the first line of the",
-    "                          input file",
+    "-output-directory=DIR   use existing DIR as the directory to write files in",
+    "[-no]-parse-first-line  disable/enable parsing of first line of input file",
     "-progname=STRING        set program (and fmt) name to STRING",
     "-recorder               enable filename recorder",
     "[-no]-shell-escape      disable/enable \\write18{SHELL COMMAND}",
@@ -397,9 +392,8 @@ const_string TEXHELP[] = {
     "[-no]-mktex=FMT         disable/enable mktexFMT generation (FMT=tex/tfm)",
     "-mltex                  enable MLTeX extensions such as \\charsubdef",
     "-output-comment=STRING  use STRING for DVI file comment instead of date",
-    "-output-directory=DIR   use DIR as the directory to write files to",
-    "[-no]-parse-first-line  disable/enable parsing of the first line of the",
-    "                          input file",
+    "-output-directory=DIR   use existing DIR as the directory to write files in",
+    "[-no]-parse-first-line  disable/enable parsing of first line of input file",
     "-progname=STRING        set program (and fmt) name to STRING",
     "-recorder               enable filename recorder",
     "[-no]-shell-escape      disable/enable \\write18{SHELL COMMAND}",
@@ -453,11 +447,10 @@ const_string XETEXHELP[] = {
     "[-no]-mktex=FMT         disable/enable mktexFMT generation (FMT=tex/tfm)",
     "-mltex                  enable MLTeX extensions such as \\charsubdef",
     "-output-comment=STRING  use STRING for XDV file comment instead of date",
-    "-output-directory=DIR   use DIR as the directory to write files to",
+    "-output-directory=DIR   use existing DIR as the directory to write files in",
     "-output-driver=CMD      use CMD as the XDV-to-PDF driver instead of xdvipdfmx",
     "-no-pdf                 generate XDV (extended DVI) output rather than PDF",
-    "[-no]-parse-first-line  disable/enable parsing of the first line of the",
-    "                          input file",
+    "[-no]-parse-first-line  disable/enable parsing of first line of input file",
     "-papersize=STRING       set PDF media size to STRING",
     "-progname=STRING        set program (and fmt) name to STRING",
     "-recorder               enable filename recorder",
