@@ -1,3 +1,8 @@
+2011-02-14  Karl Berry  <karl@tug.org>
+
+	* texmfmp-help.h: propagate -output-dir wording change to other msgs. 
+	From Akira.
+
 2011-02-08  Karl Berry  <karl@tug.org>
 
 	* texmfmp-help.h (MFHELP): -output-dir must be an existing dir.
